# midi-tools

./: .clang-format  CMakeLists.txt  CMakePresets.json  midiplayer.py
.devcontainer/: Dockerfile  devcontainer.json
cmake/: FindGStreamer.cmake  add_orphan_headers.cmake  build.cmake  deps.cmake
src/: gstreamer.cpp  main.cpp  midireader.cpp
src/modules/logger/: CMakeLists.txt  logger.cpp
src/modules/logger/include/logger/: logger.h
src/modules/logger/tests/: CMakeLists.txt  logger.tests.cpp
src/test_apps/gstreamer/: CMakeLists.txt  app_src.cpp  audiotestsrc.cpp
src/test_apps/libremidi/: CMakeLists.txt  midireader.cpp  virtual.cpp
src/test_apps/midiplayer/: CMakeLists.txt  midiplayer.cpp
src/test_apps/midireader/: CMakeLists.txt  midireader.cpp
